<resources>
    <string name="app_name">Contact App Kotlin</string>
    <string name="lb_name">Nama</string>
    <string name="lb_date_of_birth">Tanggal lahir</string>
    <string name="lb_profession">Pekerjaan</string>
    <string name="lb_gender">Jenis Kelamin</string>
    <string name="lb_email">Email</string>
    <string name="lb_phone">Telpon</string>
    <string name="lb_male">L</string>
    <string name="lb_female">P</string>
    <string name="lb_save">Simpan</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
